--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 MONGO_URL=mongodb+srv://andrey-ansar:28122011leona@cluster0.epdxhv2.mongodb.net/UniComp(Demo)?retryWrites=true&w=majority
 PORT=5000
+EMAIL_SERVICE=gmail
+EMAIL_AUTH_TYPE=OAuth2
+EMAIL_USER=info@uni-comp.kz
+CLIENT_ID=315754937691-trc57003l5v07o6g9e3galjq1pcj99jn.apps.googleusercontent.com
+CLIENT_SECRET=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
+REFRESH_TOKEN=1//0cFqRAv9xuEILCgYIARAAGAwSNwF-L9IrWLdg00vAxtMv77f-2OTn3pC8tgjdS_iosGiqLLJIm-yNREhmrHlQPGHtvvmQISVthOM
