--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
-    "nodemon": "^2.0.21"
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.3"
   }
 }
